Prevent zoom on focus on mobile

--- a/ui/src/index.scss
+++ b/ui/src/index.scss
@@ -257,8 +257,8 @@
       // Use as much vertical height as possible on mobile, but ensure that the
       // modal footer does not take up the bottom 44px of the screen to avoid
       // accidental iPhone fullscreen toolbar triggering.
-      height: 88vh !important;
-      max-height: 88vh !important;
+      height: 89vh !important;
+      max-height: 89vh !important;
       width: 100vw;
 
      .modal-card-head, .modal-card-foot {
